tests/compile_fail/serial_invalid_literal.rs
skuld::new_label!(MY_LABEL, "my_label");

#[skuld::test(serial = 42)]
fn bad_serial_literal() {}

fn main() {}
