tests/compile_fail/serial_invalid_literal.stderr
error: expected identifier
 --> tests/compile_fail/serial_invalid_literal.rs:3:24
  |
3 | #[skuld::test(serial = 42)]
  |                        ^^
